<resources>
    <string name="app_name">Kid Connect</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_reset_password">ResetPassword</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="option">Option</string>
    <string name="change_password">Change Password</string>
    <string name="how_to_use">How to use</string>
    <string name="about">About</string>
    <string name="log_out">Log out</string>
    <string name="chanucreation">ChanuCreation</string>
    <string name="threedots">threeDots</string>
    <string name="person_s_name">Person\'s Name</string>
    <string name="notification">Notification</string>
    <string name="task">Task</string>
    <string name="email_verification">Email Verification</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="submit">Submit</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_email">Enter Email</string>
    <string name="child_s_schedule">Child\'s Schedule</string>
    <string name="start">Start</string>
    <string name="management_and_control">Management and Control</string>
    <string name="child_art">child_art</string>
    <string name="open_google_map">Open Google Map</string>
    <string name="childdetails">Child Details</string>
    <string name="show_on_map">Show on Map</string>
    <string name="reg_art">reg_art</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="i_m_parent">I\'m parent</string>
    <string name="registration">Registration</string>
    <string name="password_reset">Password Reset</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="reset_password">reset password</string>
    <string name="login_art">login_art</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account?</string>
    <string name="if_you_are_parent_you_can_use_google_login">If you are Parent You can use google login...</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="child_email">Child Email</string>
    <string name="child_password">Child Password</string>
    <string name="add_child">Add Child</string>
    <string name="nick_name">Nick Name</string>
    <string name="edit">edit</string>
    <string name="task_list">Task List</string>
    <string name="location">Location</string>
    <string name="view">view</string>
    <string name="remove">Remove</string>
    <string name="sampleTime">1h 10min ago</string>
    <string name="from">From</string>
    <string name="uparrow">upArrow</string>
    <string name="downarrow">downArrow</string>
    <string name="category">Category</string>
    <string name="addtask">addTask</string>
    <string name="parent_details">Parent Details</string>
    <string name="parent_art">parent_art</string>
    <string name="task_details">Task Details</string>
    <string name="task_name">Task Name</string>
    <string name="task_category">Task Category</string>
    <string name="task_description">Task Description</string>
    <string name="delete_task">Delete Task</string>
    <string name="task_time">Task Time</string>
    <string name="chat">chat</string>
    <string name="comment">Comment</string>
    <string name="add_task">Add Task</string>
    <string name="start_date_time"><![CDATA[Start date&time]]></string>
    <string name="calendar">calendar</string>
    <string name="add">Add</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="account_type">Account Type</string>
    <string name="register_date">Register Date</string>
    <string name="delete_account">Delete Account</string>
    <string name="please_indicate_the_reason_for_deleting_the_account">Please indicate the reason for delete.</string>
    <string name="feedback">FeedBack</string>
    <string name="kid_connect">Kid Connect</string>
    <string name="kidconnect_text">detainment</string>
    <string name="find_me_on_linkedin">Find me on Linkedin</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="video_name">Video Name</string>
    <string name="youtube">youtube</string>
    <string name="type_here_your_feedback">Type here your feedback</string>
    <string name="select_category">Select Category</string>
    <string name="study">Study</string>
    <string name="sleeping">Sleeping</string>
    <string name="other">Other</string>
    <string name="playing">Playing</string>
    <string name="leisure">leisure</string>
    <string name="edit_nickname">Edit Nickname</string>
    <string name="enter_nickname">Enter Nickname</string>
    <string name="nickname">Nickname</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="authenticate">Authenticate</string>
    <string name="child_tasks">child Tasks</string>
    <string name="give_comment">Give comment</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="Edit">Edit</string>
    <string name="enter_value">Enter Value</string>
    <string name="type_here">Type here</string>
</resources>